--- a/analysis-2023.Rmd
+++ b/analysis-2023.Rmd
@@ -8,22 +8,25 @@ date: "2023-12-05"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+# remotes::install_github("fhdsl/metricminer")
+library(metricminer)
 ```
 
-## Including Plots
+Google Analytics
+```{r}
+# Authorize
+authorize("google")
+# Get all GA accounts on hutchdasl@gmail.com
+accounts <- get_ga_user()
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+# Get all metrics
+stats_list <- all_ga_metrics(account_id = accounts$items$id[5])
+# Get metrics dataframe
+stats_list$metrics
+# Get dimensions dataframe
+stats_list$dimensions
+# Get link clicks dataframe
+stats_list$link_clicks
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
