--- a/itn-eval-metrics.Rmd
+++ b/itn-eval-metrics.Rmd
@@ -221,14 +221,41 @@ length(unique_emails)
 ## Unique visitors to websites
 
 ```{r}
-ggplot2::ggplot(itcr_course_data, ggplot2::aes(x = reorder(website, -activeUsers), y = activeUsers)) +
-  ggplot2::geom_bar(stat = "identity", fill = "#89CFF0") +
+ggplot2::ggplot(ga_metrics, ggplot2::aes(x = reorder(website, -activeUsers), y = activeUsers)) +
+  ggplot2::geom_bar(stat = "identity", fill = "lightgreen") +
   ggplot2::theme_classic() +
   ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust=1)) +
   ggplot2::xlab("") +
   ggplot2::geom_text(ggplot2::aes(label = activeUsers), size = 3, vjust = - 1) +
   ggplot2::ylim(c(0, 6000))
   ggplot2::ggsave(file.path("plots", "itn_website_visits.png"), width = 4, height = 3)
+```
+## Table of user engagement
+
+```{r}
+user_totals <- ga_metrics %>% 
+  janitor::clean_names() %>% 
+  dplyr::select(website, active_users, average_session_duration) %>% 
+  knitr::kable(digits=2, long_table = TRUE,padding = 2) %>%
+  kableExtra::kable_styling(latex_options = c("striped", "scale_down"))
+
+user_totals %>%
+  kableExtra::save_kable(file.path("plots/course_user_table.pdf"))
+
+user_totals
+```
+
+```{r}
+user_engagement <- ga_metrics %>% 
+  janitor::clean_names() %>% 
+  dplyr::select(website, screen_page_views_per_user, sessions, average_session_duration, screen_page_views) %>% 
+  knitr::kable(digits=2, long_table = TRUE, padding = 2) %>%
+  kableExtra::kable_styling(latex_options = c("striped", "scale_down"))
+
+user_engagement %>%
+  kableExtra::save_kable("plots/course_engagement_table.pdf")
+
+user_engagement
 ```
 
 ## ITN Course and Website Traffic Overtime 
@@ -249,6 +276,7 @@ traffic_plot <- web_traffic_overtime %>%
   ggplot2::geom_bar(stat = "identity", fill = "pink") + 
   ggplot2::scale_x_date(date_labels = "%b %Y") + 
   ggplot2::ylab("ITN Website Visits Overtime") +
+  ggplot2::xlab("") +
   ggplot2::theme_minimal() +
   ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1))
 
@@ -272,7 +300,7 @@ ggplot2::ggplot(ggplot2::aes(y = n, x = month_year)) +
                  strip.text.x = ggplot2::element_text(size = 8)) + 
   ggplot2::facet_wrap(~website) 
 
-ggplot2::ggsave(file.path("plots", "itn_course_traffic_plot_by_course.png"), width = 4, height = 2)
+ggplot2::ggsave(file.path("plots", "itn_course_traffic_plot_by_course.png"), width = 10, height = 5)
 ```
 
 
