--- a/itn-eval-metrics.Rmd
+++ b/itn-eval-metrics.Rmd
@@ -26,6 +26,7 @@ set.seed(1234)
 devtools::load_all("../metricminer/")
 library("ggplot2")
 library("dlstats")
+library("magrittr")
 
 source(file.path("local_auth_2.R"))
 auth_from_secret("calendly", token = Sys.getenv("METRICMINER_CALENDLY"))
@@ -83,7 +84,8 @@ coursera_numbers <- c(
   "Documentation and Usability Course" = 284,
   "Computing" = 931,
   "Reproducibility" = 359,
-  "Advanced Reproducibility in Cancer Informatics" = 264
+  "Advanced Reproducibility in Cancer Informatics" = 264, 
+  "AI for Decision Makers" = sum(c(8, 27, 20, 39))
 ) %>%
   data.frame() %>%
   tibble::rownames_to_column("website") %>%
@@ -111,12 +113,67 @@ itcr_course_data <- ga_metrics %>%
 readr::write_tsv(itcr_course_data, file.path("data", "itcr_course_metrics.tsv"))
 ```
 
+## Get OTTR courses
+
+```{r}
+
+sync_yamls <- c(
+  "https://raw.githubusercontent.com/jhudsl/OTTR_Template/main/.github/sync.yml", 
+  "https://raw.githubusercontent.com/C-MOOR/C-MOOR_Template//main/.github/sync.yml", 
+  "https://raw.githubusercontent.com/jhudsl/AnVIL_Template/main/.github/sync.yml",
+  "https://raw.githubusercontent.com/datatrail-jhu/DataTrail_Template/main/.github/sync.yml"
+)
+
+
+extract_repos <- function(yaml) {
+  content <- yaml::read_yaml(yaml) 
+  repos <- unlist(purrr::map(content$group, "repos"))
+  repos <- unlist(strsplit(repos, "\n"))
+  return(repos)
+}
+
+all_ottr_repos <- unlist(lapply(sync_yamls, extract_repos))
+
+ottr_df <- data.frame(repo_name = all_ottr_repos) %>%
+  tidyr::separate(repo_name, into = c("organization", "repo"), sep = "\\/", remove = FALSE) %>% 
+  dplyr::mutate(template = dplyr::case_when(
+    stringr::str_detect(repo, "template|Template") ~ "template", 
+    TRUE ~ "course"
+  )) %>% 
+  dplyr::distinct()
+
+ottr_df %>% dplyr::count(organization)
+
+ottr_df %>% 
+  dplyr::filter(template == "course") %>% 
+  dplyr::count()
+```
+
 ## Collaboration Info
 
 ```{r}
-meetings <- readr::read_csv("events-export.csv")
+collabs <- googlesheets4::read_sheet("https://docs.google.com/spreadsheets/d/1-8vox2LzkVKzhmSFXCWjwt3jFtK-wHibRAq2fqbxEyo/edit#gid=0")
 
-unique(meetings$`Invitee Email`)
+nrow(collabs)
+
+collabs %>% dplyr::count(ITN_ITCR_or_external) %>% 
+  dplyr::mutate(perc = n/sum(n))
+```
+
+```{r}
+collabs <- collabs %>% tidyr::separate_rows("Category", sep = ", ", ) %>% 
+  dplyr::mutate(Category = trimws(Category)) %>% 
+  dplyr::filter(Category != "?")
+
+collabs %>% dplyr::count(Category) %>% 
+  ggplot2::ggplot(ggplot2::aes(y = n, x = reorder(Category,-n), fill = Category)) +
+  ggplot2::geom_bar(position = "dodge", stat = "identity") +
+  ggplot2::theme_minimal() +
+  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1), 
+                 legend.position="none") + 
+  ggplot2::xlab("")
+
+ggplot2::ggsave(file.path("plots", "itn_collaboration_types.png"), width = 4, height = 3)
 ```
 
 ```{r}
@@ -418,7 +475,7 @@ ggplot2::ggsave(file.path("plots", "itn_software_website_traffic.png"), width = 
  download_stats %>% dplyr::group_by(package) %>%
    dplyr::summarize(download_total = sum(downloads))
 
-sum(download_stats$downloads)
+sum(download_stats$downloads) + 426
 
 if (!is.null(download_stats)) {
   print(head(download_stats))
@@ -475,6 +532,8 @@ totals <- data.frame(
     sum(course_only$total_coursera_enrollments, na.rm = TRUE),
     sum(course_only$total_leanpub_enrollees, na.rm = TRUE)),
   modality = c("website", "Coursera", "Leanpub"))
+
+sum(totals$learners)
 ```
 
 ### Total learners from each platform
