--- a/itn-eval-metrics.Rmd
+++ b/itn-eval-metrics.Rmd
@@ -120,7 +120,7 @@ audience_df <- c(
   "Ethical Data Handling" = "Leadership",
   "OTTR website"= "Website",
   "Choosing Genomic Tools" = "New to data", 
-  "Overleaf Intro" = "Other", 
+  "Overleaf Intro" = "Leadership", 
   "GitHub Automation for Scientists" = "Software developers") %>%
   data.frame() %>%
   tibble::rownames_to_column("website") %>%
@@ -130,7 +130,11 @@ audience_df <- c(
 itcr_course_data <- ga_metrics %>% 
   dplyr::left_join(coursera_numbers) %>%
   dplyr::left_join(leanpub_numbers) %>% 
-  dplyr::left_join(audience_df)
+  dplyr::left_join(audience_df) %>% 
+  dplyr::mutate(website = dplyr::case_when(
+    website == "Advanced Reproducibility in Cancer Informatics" ~ "Advanced Reproducibility",
+    website == "Documentation and Usability Course" ~ "Documentation and Usability", 
+                                           TRUE ~ website))
 
 readr::write_tsv(itcr_course_data, file.path("data", "itcr_course_metrics.tsv"))
 ```
@@ -187,15 +191,21 @@ collabs <- collabs %>% tidyr::separate_rows("Category", sep = ", ", ) %>%
   dplyr::mutate(Category = trimws(Category)) %>% 
   dplyr::filter(Category != "?")
 
+nrow(collabs)
+```
+
+```{r}
 collabs %>% dplyr::count(Category) %>% 
   ggplot2::ggplot(ggplot2::aes(y = n, x = reorder(Category,-n), fill = Category)) +
   ggplot2::geom_bar(position = "dodge", stat = "identity") +
   ggplot2::theme_minimal() +
   ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1), 
-                 legend.position="none") + 
+                 strip.text.x = ggplot2::element_text(size = 6),
+                 legend.position="none", 
+                 plot.margin = unit(c(.75,.5,.5,.5), "cm")) + 
   ggplot2::xlab("")
 
-ggplot2::ggsave(file.path("plots", "itn_collaboration_types.png"), width = 4, height = 3)
+ggplot2::ggsave(file.path("plots", "itn_collaboration_types.png"), width = 7, height = 5)
 ```
 
 ```{r}
@@ -409,16 +419,16 @@ itcr_course_data %>% janitor::clean_names() %>%
                       values_to = "value") %>% 
   dplyr::filter(website != "OTTR website") %>% 
   dplyr::filter(website != "ITN Website") %>% 
-  dplyr::mutate(website = dplyr::case_when(website == "Advanced Reproducibility in Cancer Informatics" ~ "Advanced Reproducibility", 
-                                           TRUE ~ website)) %>% 
   ggplot2::ggplot(ggplot2::aes(y = value, x = website, fill = audience)) +
   ggplot2::geom_bar(position = "dodge", stat = "identity") +
   ggplot2::theme_minimal() +
-  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1)) +
+  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1), 
+                 strip.text.x = ggplot2::element_text(size = 8), 
+                 plot.margin = unit(c(1.5,.5,.5,.5), "cm")) +
   ggplot2::facet_wrap(~metric_name, scales = "free_y") + 
   ggplot2::scale_fill_manual(values=cbPalette)
 
-ggplot2::ggsave(file.path("plots", "itn_engagement_stats.png"), width = 6, height = 4)
+ggplot2::ggsave(file.path("plots", "itn_engagement_stats.png"), width = 8, height = 6)
 ```
 
 ## ITN Course and Website Traffic Overtime 
@@ -461,7 +471,13 @@ long_df <- itcr_course_data %>% dplyr::select(c("website",
                                          names_to = "modality", 
                                          values_to = "learner_count") %>%
   dplyr::filter(website != "ITN Website") %>%
-  dplyr::filter(website != "OTTR website") 
+  dplyr::filter(website != "OTTR website") %>%   
+  dplyr::mutate(modality = dplyr::case_when(
+    modality == "total_leanpub_enrollees" ~ "Total Leanpub Enrollments", 
+    modality == "total_coursera_enrollments" ~ "Total Coursera Enrollments",
+    modality == "totalUsers" ~ "Website Learners", 
+    TRUE ~ modality
+  ))
 ```
 
 
@@ -483,7 +499,7 @@ ggplot2::ggplot(ggplot2::aes(x = reorder(modality, -total_learners), y = total_l
   ggplot2::facet_wrap(~audience) + 
   ggplot2::scale_fill_manual(values=cbPalette)
 
-ggplot2::ggsave(file.path("plots", "itn_total_enrollments.png"), width = 4, height = 3)
+ggplot2::ggsave(file.path("plots", "itn_total_enrollments.png"), width = 8, height = 3)
 ```
 
 ### Total learners by course
@@ -508,9 +524,9 @@ ggplot2::ggsave(file.path("plots", "itn_total_learners_by_course.png"), width = 
 ```
 
 ```{r}
-learner_by_course %>% 
-  dplyr::group_by(audience) %>%
-  dplyr::summarize(total_learners = sum(total_learners, na.rm = TRUE))%>%
+long_df %>% 
+  dplyr::group_by(website, audience) %>%
+  dplyr::summarize(total_learners = sum(learner_count, na.rm = TRUE)) %>%
   dplyr::arrange(-total_learners) %>% 
   knitr::kable()
 ```
@@ -519,6 +535,10 @@ learner_by_course %>%
 
 ```{r}
 web_traffic_overtime %>% 
+    dplyr::mutate(website = dplyr::case_when(
+    website == "Advanced Reproducibility in Cancer Informatics" ~ "Advanced Reproducibility",
+    website == "Documentation and Usability Course" ~ "Documentation and Usability", 
+                                           TRUE ~ website)) %>%
   dplyr::group_by(website, month_year, audience) %>% 
   dplyr::count() %>% 
   dplyr::filter(website != "ITN Website") %>% 
